# open.unfck.org

./: README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: nextjs.yml
data/: Global-Indicator-Framework-after-2025-review-English.xlsx  INFO  expenses-by-sdg.csv  government-donor-revenue.csv  un-secretariat-expenses.csv
data/budget/: INFO  un-system-expenses.csv
data/ceb/: contrib_types_mapping.csv  member_states.csv  rev_types_mapping.csv
docs/: concept.md  content.md  data-availability.md  data-fusion-expenses.md  data-fusion-revenue.md  data-fusion.md  questions.md
docs/research/: ceb_aggregation.md  data-availability.md  data-tracking.md  data.md  uninfo.md  web-framework.md
public/data/: contributor-trends.json  country-expenses-2013.json  country-expenses-2014.json  country-expenses-2015.json  country-expenses-2016.json  country-expenses-2017.json  country-expenses-2018.json  country-expenses-2019.json  country-expenses-2020.json  country-expenses-2021.json  country-expenses-2022.json  country-expenses-2023.json  (+58 more)
python/: 01-fetch_from_airtable.py  02-fetch_ceb_data.py  02-process_donor_data.py  03-fuse_ceb_revenue.py  03-process_expenses_data.py  04-process_entity_revenue.py  04-scrape_member_states.py  05-export_contributor_json.py  06-fuse_ceb_expenses.py  06-process_sdgs.py  07-export_expenses_json.py  07-process_country_expenses.py  08-fetch_uninfo.py  08-process_contributor_trends.py  09-process_entity_trends.py  10-export_uninfo_json.py  99-generate_manifest.py  utils.py
scripts/: generate-entity-trends.py
(+193 files in other folders)
