[project]
name = "un-website-boilerplate"
version = "0.1.0"
description = "UN Website Boilerplate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyairtable>=3.3.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "tqdm>=4.67.2",
]
